--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "descomplicando-github-actions",
   "version": "1.0.0",
   "description": "Descomplicando GitHub Actions - LINUXtips",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "build": "echo 'Build completed successfully!'"
-  },
   "keywords": [
     "github-actions",
     "ci-cd",
@@ -14,15 +9,28 @@
     "tutorial",
     "linuxtips"
   ],
-  "author": "LINUXtips",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1"
+  "homepage": "https://github.com/caiquefofs/LINUXtips-github-actions#readme",
+  "bugs": {
+    "url": "https://github.com/caiquefofs/LINUXtips-github-actions/issues"
   },
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/caiquefofs/LINUXtips-github-actions.git"
+  },
+  "license": "MIT",
+  "author": "LINUXtips",
+  "type": "commonjs",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "echo 'Build completed successfully!'"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "helmet": "^7.0.0"
+  },
   "engines": {
     "node": ">=16.0.0"
   }
